z-index fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
 
 .gradient {
   height: fit-content;
-  z-index: 3;
+  z-index: -3;
   width: 100%;
   max-width: 640px;
   background-image: radial-gradient(at 27% 37%,
